fix: Move handler return error
