# server/docs/swagger.json
@@ -42,11 +42,11 @@
                 "parameters": [
                     {
                         "description": "request",
-                        "name": "Body",
+                        "name": "game",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/dto.CreateGameRequest"
+                            "$ref": "#/definitions/dto.CreateGameBody"
                         }
                     }
                 ],
@@ -54,8 +54,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "type": "object",
-                            "additionalProperties": true
+                            "$ref": "#/definitions/dto.CreateGameResponse"
                         }
                     }
                 }
@@ -82,10 +81,8 @@
                 "parameters": [
                     {
                         "type": "integer",
-                        "description": "gameId",
                         "name": "gameId",
-                        "in": "path",
-                        "required": true
+                        "in": "path"
                     }
                 ],
                 "responses": {
@@ -119,10 +116,8 @@
                 "parameters": [
                     {
                         "type": "integer",
-                        "description": "gameId",
                         "name": "gameId",
-                        "in": "path",
-                        "required": true
+                        "in": "path"
                     }
                 ],
                 "responses": {
@@ -156,10 +151,8 @@
                 "parameters": [
                     {
                         "type": "integer",
-                        "description": "gameId",
                         "name": "gameId",
-                        "in": "path",
-                        "required": true
+                        "in": "path"
                     },
                     {
                         "description": "move",
@@ -167,7 +160,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/dto.DoMoveRequest"
+                            "$ref": "#/definitions/dto.DoMoveBody"
                         }
                     }
                 ],
@@ -175,7 +168,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/dto.GetBoardResponse"
+                            "$ref": "#/definitions/models.Move"
                         }
                     }
                 }
@@ -197,7 +190,7 @@
                 "parameters": [
                     {
                         "description": "request",
-                        "name": "Body",
+                        "name": "session",
                         "in": "body",
                         "required": true,
                         "schema": {
@@ -209,8 +202,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "type": "object",
-                            "additionalProperties": true
+                            "$ref": "#/definitions/dto.CreateSessionResponse"
                         }
                     }
                 }
@@ -232,7 +224,7 @@
                 "parameters": [
                     {
                         "description": "request",
-                        "name": "Body",
+                        "name": "user",
                         "in": "body",
                         "required": true,
                         "schema": {
@@ -244,8 +236,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "type": "object",
-                            "additionalProperties": true
+                            "$ref": "#/definitions/dto.CreateUserResponse"
                         }
                     }
                 }
@@ -264,11 +255,46 @@
                 }
             }
         },
-        "dto.CreateGameRequest": {
+        "dto.CreateGameBody": {
             "type": "object",
             "properties": {
                 "isWhite": {
                     "type": "boolean"
+                }
+            }
+        },
+        "dto.CreateGameResponse": {
+            "type": "object",
+            "properties": {
+                "blackKingCell": {
+                    "type": "integer"
+                },
+                "blackUserId": {
+                    "type": "integer"
+                },
+                "gameId": {
+                    "type": "integer"
+                },
+                "isCheckBlack": {
+                    "type": "boolean"
+                },
+                "isCheckWhite": {
+                    "type": "boolean"
+                },
+                "isEnded": {
+                    "type": "boolean"
+                },
+                "isStarted": {
+                    "type": "boolean"
+                },
+                "side": {
+                    "type": "integer"
+                },
+                "whiteKingCell": {
+                    "type": "integer"
+                },
+                "whiteUserId": {
+                    "type": "integer"
                 }
             }
         },
@@ -283,6 +309,14 @@
                 }
             }
         },
+        "dto.CreateSessionResponse": {
+            "type": "object",
+            "properties": {
+                "token": {
+                    "type": "string"
+                }
+            }
+        },
         "dto.CreateUserRequest": {
             "type": "object",
             "properties": {
@@ -291,7 +325,18 @@
                 }
             }
         },
-        "dto.DoMoveRequest": {
+        "dto.CreateUserResponse": {
+            "type": "object",
+            "properties": {
+                "id": {
+                    "type": "integer"
+                },
+                "password": {
+                    "type": "string"
+                }
+            }
+        },
+        "dto.DoMoveBody": {
             "type": "object",
             "properties": {
                 "from": {
@@ -319,12 +364,12 @@
                 "moves": {
                     "type": "array",
                     "items": {
-                        "$ref": "#/definitions/dto.Move"
+                        "$ref": "#/definitions/models.Move"
                     }
                 }
             }
         },
-        "dto.Move": {
+        "models.Move": {
             "type": "object",
             "properties": {
                 "blackKingCell": {
