# server/domains/game/MovesRepository.go
@@ -2,6 +2,7 @@ package game
 
 import (
 	"database/sql"
+	"fmt"
 	"github.com/IvaCheMih/chess/server/domains/game/models"
 	"github.com/IvaCheMih/chess/server/domains/game/move_service"
 )
@@ -42,7 +43,7 @@ func (m *MovesRepository) AddMove(gameId, from, to int, board models.Board, isCh
 		killedFigureId = board.Cells[to].FigureId
 	}
 
-	rows, err := tx.Query(`
+	row := tx.QueryRow(`
 		insert into moves (gameId,moveNumber, from_id,to_id,figureId, killedFigureId, newFigureId, isCheckWhite , whiteKingCell, isCheckBlack, blackKingCell)
 			values ($1,(SELECT COUNT(*) FROM moves WHERE gameId = $2)+1, $3, $4, $5, $6, $7, $8,$9,$10,$11)
 		RETURNING *
@@ -60,17 +61,11 @@ func (m *MovesRepository) AddMove(gameId, from, to int, board models.Board, isCh
 		isCheckBlack.KingGameID,
 	)
 
-	defer rows.Close()
+	var move models.Move
 
-	if err != nil {
-		return models.Move{}, err
-	}
+	err := FromRowToMove(row, &move)
 
-	var moves []models.Move
-
-	err = FromRowsToMove(rows, &moves)
-
-	move := moves[0]
+	fmt.Println(move)
 
 	return move, err
 }
@@ -90,4 +85,9 @@ func FromRowsToMove(rows *sql.Rows, movesOut *[]models.Move) error {
 	movesOut = &moves
 
 	return nil
+}
+
+func FromRowToMove(row *sql.Row, move *models.Move) error {
+	err := row.Scan(&move.Id, &move.GameId, &move.MoveNumber, &move.From, &move.To, &move.FigureId, &move.KilledFigureId, &move.NewFigureId, &move.IsCheckWhite, &move.WhiteKingCell, &move.IsCheckBlack, &move.BlackKingCell)
+	return err
 }
